mODIFIQUEI O CODIGO E MEXI NO MARKDOW

--- a/Projeto SUS/notebook_pysus.ipynb
+++ b/Projeto SUS/notebook_pysus.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,13 +50,454 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aqui, usando o método 'pd.read_csv()' li os dados do arquivo CSV 'Leptospirose.csv' gerado a anteriormmente em um novo DataFrame chamado **dataframe_lepto_2018**. Em seguida, novamente converti a coluna 'DT_NOTIFIC' para o formato de data, já que posteriormente estava dando erro sem esse comando. Então defini a coluna 'DT_NOTIFIC' como o índice DataFrame usando o método set_index() com o parâmetro inplace=True. Por fim, usei o comando print() para exibir o DataFrame dataframe_lepto_2018."
+    "### Manipulando os dados\n",
+    "\n",
+    "Aqui, usando o método `pd.read_csv()`, li os dados do arquivo CSV 'Leptospirose.csv' gerado anteriormente em um novo DataFrame chamado **dataframe_lepto_2018**. Em seguida, novamente converti a coluna `DT_NOTIFIC` para o formato de data, uma vez que estava dando erro sem esse comando. Então, defini a coluna `DT_NOTIFIC` como o índice do DataFrame usando o método `set_index()`. O data frame obtido pode ser visualizado abaixo do código.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TP_NOT</th>\n",
+       "      <th>ID_AGRAVO</th>\n",
+       "      <th>SEM_NOT</th>\n",
+       "      <th>NU_ANO</th>\n",
+       "      <th>SG_UF_NOT</th>\n",
+       "      <th>ID_MUNICIP</th>\n",
+       "      <th>ID_REGIONA</th>\n",
+       "      <th>ID_UNIDADE</th>\n",
+       "      <th>DT_SIN_PRI</th>\n",
+       "      <th>SEM_PRI</th>\n",
+       "      <th>...</th>\n",
+       "      <th>DT_RISCO3</th>\n",
+       "      <th>DT_RISCO4</th>\n",
+       "      <th>CO_MUN_R1</th>\n",
+       "      <th>CO_MUN_R2</th>\n",
+       "      <th>CO_MUN_R3</th>\n",
+       "      <th>CO_MUN_R4</th>\n",
+       "      <th>CO_UF_R1</th>\n",
+       "      <th>CO_UF_R2</th>\n",
+       "      <th>CO_UF_R3</th>\n",
+       "      <th>CO_UF_R4</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DT_NOTIFIC</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01</th>\n",
+       "      <td>2</td>\n",
+       "      <td>A279</td>\n",
+       "      <td>201801</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>35</td>\n",
+       "      <td>355220</td>\n",
+       "      <td>1353</td>\n",
+       "      <td>2708779</td>\n",
+       "      <td>20171222</td>\n",
+       "      <td>201751</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01</th>\n",
+       "      <td>2</td>\n",
+       "      <td>A279</td>\n",
+       "      <td>201801</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>41</td>\n",
+       "      <td>410690</td>\n",
+       "      <td>1356</td>\n",
+       "      <td>17396</td>\n",
+       "      <td>20171230</td>\n",
+       "      <td>201752</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01</th>\n",
+       "      <td>2</td>\n",
+       "      <td>A279</td>\n",
+       "      <td>201801</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>41</td>\n",
+       "      <td>410040</td>\n",
+       "      <td>1356</td>\n",
+       "      <td>7463529</td>\n",
+       "      <td>20171228</td>\n",
+       "      <td>201752</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01</th>\n",
+       "      <td>2</td>\n",
+       "      <td>A279</td>\n",
+       "      <td>201801</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>43</td>\n",
+       "      <td>431680</td>\n",
+       "      <td>1609</td>\n",
+       "      <td>9004688</td>\n",
+       "      <td>20180101</td>\n",
+       "      <td>201801</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01</th>\n",
+       "      <td>2</td>\n",
+       "      <td>A279</td>\n",
+       "      <td>201801</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>12</td>\n",
+       "      <td>120040</td>\n",
+       "      <td>1938</td>\n",
+       "      <td>6439837</td>\n",
+       "      <td>20171225</td>\n",
+       "      <td>201752</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>2</td>\n",
+       "      <td>A279</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>31</td>\n",
+       "      <td>310620</td>\n",
+       "      <td>1449</td>\n",
+       "      <td>23140</td>\n",
+       "      <td>20181229</td>\n",
+       "      <td>201852</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>2</td>\n",
+       "      <td>A279</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>52</td>\n",
+       "      <td>520870</td>\n",
+       "      <td>1779</td>\n",
+       "      <td>2506661</td>\n",
+       "      <td>20181125</td>\n",
+       "      <td>201848</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>2</td>\n",
+       "      <td>A279</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>12</td>\n",
+       "      <td>120040</td>\n",
+       "      <td>1938</td>\n",
+       "      <td>6439837</td>\n",
+       "      <td>20181222</td>\n",
+       "      <td>201851</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>2</td>\n",
+       "      <td>A279</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>16</td>\n",
+       "      <td>160060</td>\n",
+       "      <td></td>\n",
+       "      <td>2021064</td>\n",
+       "      <td>20181225</td>\n",
+       "      <td>201852</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>2</td>\n",
+       "      <td>A279</td>\n",
+       "      <td>201901</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>35</td>\n",
+       "      <td>353440</td>\n",
+       "      <td>1335</td>\n",
+       "      <td>5272378</td>\n",
+       "      <td>20181226</td>\n",
+       "      <td>201852</td>\n",
+       "      <td>...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16885 rows × 111 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            TP_NOT ID_AGRAVO  SEM_NOT  NU_ANO  SG_UF_NOT  ID_MUNICIP  \\\n",
+       "DT_NOTIFIC                                                             \n",
+       "2018-01-01       2      A279   201801    2018         35      355220   \n",
+       "2018-01-01       2      A279   201801    2018         41      410690   \n",
+       "2018-01-01       2      A279   201801    2018         41      410040   \n",
+       "2018-01-01       2      A279   201801    2018         43      431680   \n",
+       "2018-01-01       2      A279   201801    2018         12      120040   \n",
+       "...            ...       ...      ...     ...        ...         ...   \n",
+       "2018-12-31       2      A279   201901    2018         31      310620   \n",
+       "2018-12-31       2      A279   201901    2018         52      520870   \n",
+       "2018-12-31       2      A279   201901    2018         12      120040   \n",
+       "2018-12-31       2      A279   201901    2018         16      160060   \n",
+       "2018-12-31       2      A279   201901    2018         35      353440   \n",
+       "\n",
+       "           ID_REGIONA  ID_UNIDADE  DT_SIN_PRI  SEM_PRI  ... DT_RISCO3  \\\n",
+       "DT_NOTIFIC                                              ...             \n",
+       "2018-01-01   1353         2708779    20171222   201751  ...             \n",
+       "2018-01-01   1356           17396    20171230   201752  ...             \n",
+       "2018-01-01   1356         7463529    20171228   201752  ...             \n",
+       "2018-01-01   1609         9004688    20180101   201801  ...             \n",
+       "2018-01-01   1938         6439837    20171225   201752  ...             \n",
+       "...               ...         ...         ...      ...  ...       ...   \n",
+       "2018-12-31   1449           23140    20181229   201852  ...             \n",
+       "2018-12-31   1779         2506661    20181125   201848  ...             \n",
+       "2018-12-31   1938         6439837    20181222   201851  ...             \n",
+       "2018-12-31                2021064    20181225   201852  ...             \n",
+       "2018-12-31   1335         5272378    20181226   201852  ...             \n",
+       "\n",
+       "            DT_RISCO4 CO_MUN_R1  CO_MUN_R2 CO_MUN_R3 CO_MUN_R4 CO_UF_R1  \\\n",
+       "DT_NOTIFIC                                                                \n",
+       "2018-01-01                                                                \n",
+       "2018-01-01                                                                \n",
+       "2018-01-01                                                                \n",
+       "2018-01-01                                                                \n",
+       "2018-01-01                                                                \n",
+       "...               ...       ...        ...       ...       ...      ...   \n",
+       "2018-12-31                                                                \n",
+       "2018-12-31                                                                \n",
+       "2018-12-31                                                                \n",
+       "2018-12-31                                                                \n",
+       "2018-12-31                                                                \n",
+       "\n",
+       "           CO_UF_R2 CO_UF_R3  CO_UF_R4  \n",
+       "DT_NOTIFIC                              \n",
+       "2018-01-01                              \n",
+       "2018-01-01                              \n",
+       "2018-01-01                              \n",
+       "2018-01-01                              \n",
+       "2018-01-01                              \n",
+       "...             ...      ...       ...  \n",
+       "2018-12-31                              \n",
+       "2018-12-31                              \n",
+       "2018-12-31                              \n",
+       "2018-12-31                              \n",
+       "2018-12-31                              \n",
+       "\n",
+       "[16885 rows x 111 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe_lepto_2018 = pd.read_csv('Leptospirose.csv')\n",
+    "dataframe_lepto_2018['DT_NOTIFIC'] = pd.to_datetime(dataframe_lepto_2018['DT_NOTIFIC'])\n",
+    "dataframe_lepto_2018.set_index('DT_NOTIFIC', inplace = True)\n",
+    "dataframe_lepto_2018"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe_lepto_2018 = dataframe_lepto_2018[['ID_MUNICIP', 'SG_UF', 'NU_IDADE_N', 'CS_SEXO', 'CS_RACA']]"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
