Markdown dataframe só com as variaveis utilziadas

--- a/Projeto SUS/notebook_pysus.ipynb
+++ b/Projeto SUS/notebook_pysus.ipynb
@@ -472,12 +472,174 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dataframe_lepto_2018 = dataframe_lepto_2018[['ID_MUNICIP', 'SG_UF', 'NU_IDADE_N', 'CS_SEXO', 'CS_RACA']]"
+    "Para melhor visualização dos dados, mantive no DataFrame apenas as variáveis que irei utilizar ao longo do trabalho. Modifiquei o próproprio DataFrame, pois sei que não usarei mais as variáveis excluidas. Contudo, caso necessárias, ainda podem ser acessadas pelo `CSV`. Ficando o DataFrame resumido da seguinte forma:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID_MUNICIP</th>\n",
+       "      <th>SG_UF</th>\n",
+       "      <th>NU_IDADE_N</th>\n",
+       "      <th>CS_SEXO</th>\n",
+       "      <th>CS_RACA</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DT_NOTIFIC</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01</th>\n",
+       "      <td>355220</td>\n",
+       "      <td>35</td>\n",
+       "      <td>4028</td>\n",
+       "      <td>M</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01</th>\n",
+       "      <td>410690</td>\n",
+       "      <td>41</td>\n",
+       "      <td>4012</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01</th>\n",
+       "      <td>410040</td>\n",
+       "      <td>41</td>\n",
+       "      <td>4047</td>\n",
+       "      <td>M</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01</th>\n",
+       "      <td>431680</td>\n",
+       "      <td>43</td>\n",
+       "      <td>4032</td>\n",
+       "      <td>M</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-01-01</th>\n",
+       "      <td>120040</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4021</td>\n",
+       "      <td>M</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>310620</td>\n",
+       "      <td>31</td>\n",
+       "      <td>4004</td>\n",
+       "      <td>F</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>520870</td>\n",
+       "      <td>52</td>\n",
+       "      <td>4019</td>\n",
+       "      <td>M</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>120040</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4028</td>\n",
+       "      <td>F</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>160060</td>\n",
+       "      <td>16</td>\n",
+       "      <td>4044</td>\n",
+       "      <td>F</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>353440</td>\n",
+       "      <td>35</td>\n",
+       "      <td>4051</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16885 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ID_MUNICIP SG_UF  NU_IDADE_N CS_SEXO CS_RACA\n",
+       "DT_NOTIFIC                                              \n",
+       "2018-01-01      355220    35        4028       M       4\n",
+       "2018-01-01      410690    41        4012       F       2\n",
+       "2018-01-01      410040    41        4047       M       4\n",
+       "2018-01-01      431680    43        4032       M       2\n",
+       "2018-01-01      120040    12        4021       M       4\n",
+       "...                ...   ...         ...     ...     ...\n",
+       "2018-12-31      310620    31        4004       F       4\n",
+       "2018-12-31      520870    52        4019       M       4\n",
+       "2018-12-31      120040    12        4028       F       4\n",
+       "2018-12-31      160060    16        4044       F       4\n",
+       "2018-12-31      353440    35        4051       M       1\n",
+       "\n",
+       "[16885 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe_lepto_2018 = dataframe_lepto_2018[['ID_MUNICIP', 'SG_UF', 'NU_IDADE_N', 'CS_SEXO', 'CS_RACA']]\n",
+    "dataframe_lepto_2018"
    ]
   }
  ],
